[package]
name = "simplesched"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[lib]
name = "simplesched"

[features]
default = [
    "openssl"
]

[dependencies]
log = "*"
lazy_static = "*"
url = "0.2"
context = "*"

[dev-dependencies]
env_logger = "*"
clap = "*"
rand = "*"
openssl = "*"
num_cpus = "*"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"
rev = "77775a151d"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.bytes]
git = "https://github.com/carllerche/bytes.git"
rev = "7edb577d0a"

[dependencies.openssl]
version = "*"
optional = true
