[package]
name = "simplesched"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[lib]
name = "simplesched"

[features]
default = [
    "openssl"
]

[dependencies]
log = "0.3.1"
lazy_static = "0.1.14"
url = "0.2"
context = "^0.1.1"
mio = "^0.4.1"
bytes = "^0.2.10"
hyper = "^0.6.8"

[dev-dependencies]
env_logger = "*"
clap = "*"
rand = "*"
openssl = "*"
num_cpus = "*"

[dependencies.openssl]
version = "^0.6.4"
optional = true
